# coms527-project-rlc4

./: .gitignore  CMakeLists.txt  README.md  drl.py  model.pt  results.py  start  test
drl/: __init__.py  actor.py  cluster.py  identity.py  inference.py  mcts.py  model.pt  model.py  param.py  peval.py  trainer.py  util.py
drl/env/: __init__.py  c4.py
papers/proposal/: proposal.tex
src/: CMakeLists.txt  actor.cpp  actor.h  batch.cpp  batch.h  comm.cpp  comm.h  coms527-app.cpp  coms527-test.cpp  connect4.cpp  connect4.h  environment.cpp  environment.h  environment_c4.cpp  environment_c4.h  mcts.cpp  mcts.h  params.h
src/tests/: connect4_tests.cpp  environment_c4_tests.cpp  mcts_tests.cpp
